开发对话信息持久化功能